[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/component/scripts/button.gd" type="Script" id=1]
[ext_resource path="res://art/effects/rect_simple.png" type="Texture" id=2]

[node name="Control" type="NinePatchRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_clip_content = true
focus_mode = 2
mouse_filter = 1
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
margin_right = 480.0
margin_bottom = 270.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="hover_sfx" type="AudioStreamPlayer" parent="ColorRect"]

[node name="click_sfx" type="AudioStreamPlayer" parent="ColorRect"]

[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
